--- a/templates/partials/_sidebar.html.twig
+++ b/templates/partials/_sidebar.html.twig
@@ -5,6 +5,7 @@
             <li><a href="{{ path('admin.articles') }}">Articles</a></li>
             <li><a href="{{ path('admin.categories.index') }}">Catégories</a>
             <li><a href="{{ path('admin.tags.index') }}">Tags</a></li>
+            <li><a href="{{ path('admin.comments.index') }}">Commentaires</a></li>
             <li><a href="{{ path('admin.messages.index') }}">Messages</a></li>
         </ul>
     </nav>
