--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -638,6 +638,59 @@ body {
   margin-bottom: 20px;
 }
 
+.comment-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 2rem;
+  border: 1px solid #ccc;
+}
+.comment-table th, .comment-table td {
+  padding: 1rem;
+  border-bottom: 1px solid #ccc;
+  text-align: left;
+}
+.comment-table th {
+  background: #2b4743;
+  color: #efe4d5;
+}
+.comment-table .badge {
+  border-radius: 0.5rem;
+  margin-top: 0.5rem;
+  padding: 0.5rem 0.75rem;
+  display: inline-flex;
+  align-items: center;
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+  font-size: 0.9rem;
+  text-transform: capitalize;
+}
+.comment-table .badge--pending {
+  background-color: #ffe08a;
+  color: #7a5901;
+}
+.comment-table .btn {
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  font-size: 0.9rem;
+  margin: 0 0.2rem 0.2rem 0;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.comment-table .btn--validate {
+  background-color: #c8facc;
+  color: #0d5f16;
+}
+.comment-table .btn--refuse {
+  background-color: #ffcccc;
+  color: #8a1d1d;
+}
+.comment-table .no-action {
+  color: #aaa;
+  font-style: italic;
+}
+
 .button, .table tbody tr:nth-child(even) td .button, .button--delete, .button--dark-green, .button--light-green {
   background-color: transparent;
   border: solid 2px #efe4d5;
@@ -657,12 +710,12 @@ body {
 }
 .button--light-green {
   border: solid 2px #38d6c2;
-  color: #38d6c2;
-  background-color: transparent;
-}
-.button--light-green:hover {
   background-color: #38d6c2;
   color: #2b4743;
+}
+.button--light-green:hover {
+  color: #38d6c2;
+  background-color: transparent;
 }
 .button--dark-green {
   border: solid 2px #2b4743;
@@ -683,13 +736,13 @@ body {
 }
 .button--delete {
   border: solid 2px #ea638c;
-  color: #ea638c;
-  background-color: transparent;
-}
-.button--delete:hover {
   background-color: #ea638c;
   color: #efe4d5;
-  border: #ea638c;
+}
+.button--delete:hover {
+  color: #ea638c;
+  background-color: transparent;
+  border: solid 2px #ea638c;
 }
 
 .table {
@@ -826,4 +879,13 @@ body {
   padding: 1rem;
   font-style: italic;
   white-space: pre-wrap;
+}
+
+a {
+  text-decoration: none;
+  color: #38d6c2;
+  cursor: pointer;
+}
+a:hover {
+  font-weight: bold;
 }/*# sourceMappingURL=main.css.map */
