--- a/sass/components/_link.sass
+++ b/sass/components/_link.sass
@@ -6,3 +6,11 @@ a
     cursor: pointer
     &:hover
         font-weight: bold
+
+.a-nav
+    color: var.$dark-green
+    cursor: pointer
+    &:hover
+        font-weight: bold
+        color: var.$dark-green
+        
