--- a/sass/main/_header.sass
+++ b/sass/main/_header.sass
@@ -33,6 +33,7 @@
 
         &--item
             padding: fct.rem(10) fct.rem(20)
+            color: var.$dark-green
 
             &:hover
                 color: var.$light-green
