--- a/templates/admin/dashboard/index.html.twig
+++ b/templates/admin/dashboard/index.html.twig
@@ -8,16 +8,17 @@
 <section class="dashboard-section">
     <div class="container">
         <div class="dashboard-grid">
-            <div class="card-message">
-                <h2 class="card-header">Citation du jour</h2>
-                <div class="card-body">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum totam, repellendus ducimus a sapiente modi eaque quasi expedita odit dolore? Adipisci minima doloribus ab optio iste inventore delectus necessitatibus aspernatur?</p>
-                </div>
-            </div>
-        
             <div class="stat-widget">
-                <div class="stat-number">12</div>
+                <div class="stat-number">{{ articlesCount }}</div>
                 <div class="stat-label">Articles publiés</div>
+            </div>
+            <div class="stat-widget">
+                <div class="stat-number">{{ commentsCount }}</div>
+                <div class="stat-label">Commentaires laissés</div>
+            </div>
+            <div class="stat-widget">
+                <div class="stat-number">{{ messagesCount }}</div>
+                <div class="stat-label">Messages reçus</div>
             </div>
         </div>
     </div>
@@ -67,15 +68,15 @@
     <table class="dashboard-table">
         <thead>
             <tr>
-                <th>Titre</th>
                 <th>Date de publication</th>
+                <th>Titre</th>
             </tr>
         </thead>
         <tbody>
             {% for article in articles %}
                 <tr>
+                    <td>{{ article.publishedAt | date("d-m-Y") }}</td>
                     <td><a href="{{ path('article.show', { 'slug': article.slug }) }}">{{ article.title }}</a></td>
-                    <td>{{ article.publishedAt | date("Y-m-d") }}</td>
                 </tr>
             {% else %}
                 <tr>
@@ -91,17 +92,17 @@
     <table class="dashboard-table">
         <thead>
             <tr>
+                <th>Date</th>
                 <th>Nom & Email</th>
                 <th>Message</th>
-                <th>Date</th>
             </tr>
         </thead>
         <tbody>
             {% for message in messages %}
                 <tr>
+                    <td>{{ message.createdAt | date("d-m-Y") }}</td>
                     <td><strong>{{ message.firstname }} {{ message.lastname }}</strong><br><small>{{ message.email }}</small></td>
                     <td>{{ message.content | slice(0, 50) }}...</td>
-                    <td>{{ message.createdAt | date("Y-m-d") }}</td>
                 </tr>
             {% else %}
                 <tr>
