--- a/templates/admin_base.html.twig
+++ b/templates/admin_base.html.twig
@@ -36,9 +36,9 @@
                 <ul class="nav__menu">
                     <li class="nav__menu--item">
                         {% if not app.user %}
-                            <a href="{{ path('app_login') }}">Connexion</a>
+                            <a class="a-nav" href="{{ path('app_login') }}">Connexion</a>
                         {% else %}
-                            <a  href="{{ path('app_logout') }}">Déconnexion</a>
+                            <a class="a-nav"  href="{{ path('app_logout') }}">Déconnexion</a>
                         {% endif %}
                     </li>
                 </ul>
