ckeditor bug fixed

--- a/sass/components/_form.sass
+++ b/sass/components/_form.sass
@@ -31,9 +31,15 @@
     &:focus
       border-color: var.$light-green
       outline: none
+  
+  .form--article
+    max-width: 90%
 
   @media (min-width: 768px)
     padding: 3rem
 
   @media (min-width: 1024px)
-    max-width: 500px
+    max-width: 90%
+
+
+
