--- a/templates/admin/article/new.html.twig
+++ b/templates/admin/article/new.html.twig
@@ -6,7 +6,7 @@
 
       {{ include('partials/_flash_messages.html.twig') }}
 
-      <form class="form" method="post" action="{{ path('article.new') }}">
+      <form class="form form--article" method="post" action="{{ path('article.new') }}">
 
          {{ form_start(form) }}
 
@@ -26,11 +26,6 @@
                {{ form_errors(form.category) }}
              </div>
              <div class="tag-form__group">
-               {{ form_label(form.published_at, null, {'label_attr': {'class': 'label'}}) }}
-               {{ form_widget(form.published_at, {'attr': {'class': 'input datepicker'}}) }}
-               {{ form_errors(form.published_at) }}
-             </div>
-             <div class="tag-form__group">
                {{ form_label(form.metaDescription, null, {'label_attr': {'class': 'label'}}) }}
                {{ form_widget(form.metaDescription, {'attr': {'class': 'input'}}) }}
                {{ form_errors(form.metaDescription) }}
@@ -41,9 +36,9 @@
                {{ form_errors(form.content) }}
              </div>
              {{ form_row(form.save, {
-               'label': 'Créer l\'article',
-               'attr': {'class': 'button--dark-green'}
-             }) }}
+              'label': 'Créer l\'article',
+              'attr': {'class': 'button--dark-green'}
+            }) }}
              {{ form_row(form._token) }}
 
          {{ form_end(form) }}
@@ -55,12 +50,21 @@
    <script src="https://cdn.ckeditor.com/ckeditor5/36.0.1/classic/ckeditor.js"></script>
 
    <script>
-      // Initialiser CKEditor sur le champ de contenu
-      ClassicEditor
-          .create(document.querySelector('.editor'))
-          .catch(error => {
-              console.error(error);
-          });
-  </script>
+    ClassicEditor
+        .create(document.querySelector('.editor'))
+        .then(editor => {
+            const form = document.querySelector('form');
+            form.addEventListener('submit', (event) => {
+                // Avant la soumission du formulaire, synchroniser CKEditor avec le champ textarea
+                const contentField = document.querySelector('textarea[name="article[content]"]');
+                contentField.value = editor.getData();
+            });
+        })
+        .catch(error => {
+            console.error(error);
+        });
+</script>
+
+
 
 {% endblock %}
