--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -582,6 +582,89 @@ a {
     max-width: 1880px;
   }
 }
+.article-page {
+  width: 90%;
+  max-width: 70%;
+  margin: 2.5rem auto;
+  padding: 1rem;
+}
+.article-page article {
+  margin-bottom: 3rem;
+}
+.article-page article h2 {
+  font-size: 1.8rem;
+  margin-bottom: 0.5rem;
+}
+.article-page article h3 {
+  font-size: 1.2rem;
+  color: #666;
+  margin-bottom: 1rem;
+}
+.article-page .article-content {
+  line-height: 1.6;
+  margin-bottom: 1rem;
+}
+.article-page .article-content p {
+  margin-bottom: 1rem;
+}
+.article-page .article-content h3 {
+  margin-top: 2rem;
+  font-size: 1.4rem;
+}
+.article-page .article-content p {
+  font-style: italic;
+  font-size: 0.9rem;
+}
+.article-page .comments-section {
+  border-top: 1px solid #ccc;
+  padding-top: 2rem;
+}
+.article-page .comments-section h3 {
+  font-size: 1.4rem;
+  margin-bottom: 1rem;
+}
+.article-page .comments-section .comment {
+  background-color: #f5f5f5;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+.article-page .comments-section .comment p {
+  margin-bottom: 0.5rem;
+}
+.article-page .comments-section .comment small {
+  display: block;
+  font-size: 0.8rem;
+  color: #666;
+}
+.article-page .comments-section .comment form {
+  margin-top: 0.5rem;
+}
+.article-page .comments-section .comment form button {
+  display: flex;
+  flex-direction: column;
+}
+.article-page .comments-section .comment form button a.button--dark-green, .article-page .comments-section .comment form button form {
+  margin-bottom: 10px;
+}
+.article-page .comments-section .comment-separator {
+  margin: 2rem 0;
+  border: none;
+  border-top: 2px dashed #ccc;
+}
+.article-page .comments-section .add-comment-form {
+  margin-top: 2rem;
+  padding-top: 1rem;
+}
+
+@media (min-width: 768px) {
+  .comment-buttons {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
@@ -923,6 +1006,9 @@ body {
   border-color: #38d6c2;
   outline: none;
 }
+.form .form--article {
+  max-width: 90%;
+}
 @media (min-width: 768px) {
   .form {
     padding: 3rem;
@@ -930,7 +1016,7 @@ body {
 }
 @media (min-width: 1024px) {
   .form {
-    max-width: 500px;
+    max-width: 90%;
   }
 }
 
