--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Alice&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{{ asset('css/main.css') }}">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr@4.6.13/dist/flatpickr.min.css">
+
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -67,11 +69,24 @@
         <!-- Inclusion du CDN d'Octokit -->
         <script src="https://cdn.jsdelivr.net/npm/@octokit/core@3.0.0/dist/index.min.js"></script>
 
+        <!-- Inclusion du CDN de Flatpickr-->
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr@4.6.13/dist/flatpickr.min.js"></script>
+
         <!-- Script JavaScript principal (compilé avec Webpack) -->
         <script src="{{ asset('build/app.js') }}"></script>
 
         <!-- Script JavaScript personnalisé -->
         <script type="module" src="{{ asset('js/modules/About.js') }}"></script>
+
+        <!-- Script pour initialiser flatpickr -->
+        <script>
+            document.addEventListener('DOMContentLoaded', () => {
+            flatpickr('.datepicker', {
+                dateFormat: 'd/m/Y',
+                allowInput: true
+            });
+            });
+        </script>
 
     </body>
 </html>
