--- a/sass/main/_about.sass
+++ b/sass/main/_about.sass
@@ -75,9 +75,9 @@
         flex-direction: column
         justify-content: center
         align-items: center
-    &__container-title
-        @include mixin.font(1.8rem, 600)
-        margin-bottom: fct.rem(35)
+        &-title
+            @include mixin.font(1.8rem, 600)
+            margin-bottom: fct.rem(35)
     
     &__projects
         padding: 0
@@ -89,21 +89,23 @@
         &-item
             background: var.$white
             border-radius: fct.rem(10)
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1)
+            box-shadow: 0px 4px 10px rgba(104, 168, 145, 0.1)
             padding: fct.rem(20)
             display: flex
             flex-direction: column
             position: relative
             transition: transform 0.2s ease-in-out
-            align-items: flex-start
+            align-items: center
+            justify-content: space-between
+            height: auto
 
             &:hover
                 transform: translateY(-5px)
 
         .js-home-project-title
-            font-size: fct.rem(20)
+            font-size: fct.rem(25)
             font-weight: 600
-            margin-bottom: fct.rem(10)
+            margin: fct.rem(10) 0
             color: var.$dark-green
         
         .js-home-project-description
@@ -111,12 +113,17 @@
             color: var.$dark-green
             margin-bottom: fct.rem(15)
             justify-content: start
+            text-align: start
+
+        .js-home-project-tags-container
+            color: var.$white
             
         .js-home-project-tags-container
             display: flex
             gap: fct.rem(5)
-            margin-bottom: fct.rem(20)
+            margin: fct.rem(20) 0
             align-items: center
+            justify-content: center  
 
             span
                 background: var.$pink
@@ -124,14 +131,7 @@
                 font-size: fct.rem(12)
                 padding: fct.rem(5) fct.rem(10)
                 border-radius: fct.rem(5)
-        
-    .button__icon
-        color: var.$dark-green
-        transform: scale(2)
-        
-        
-    &__container-button
-        margin-top: fct.rem(35)
+
 
 // Responsive : affichage en grille sur desktop
 @media screen and (min-width: 768px)
