--- a/sass/main/_blog.sass
+++ b/sass/main/_blog.sass
@@ -8,6 +8,66 @@
   margin: 0 auto
   padding: 20px 0
 
+.blog__highlighted-article
+  border: 4px solid var.$dark-green
+  padding: 1.5rem
+  border-radius: 10px
+  margin-bottom: 2rem
+  background-color: var.$white
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1)
+
+  .highlighted-title
+    font-size: 1.5rem
+    margin-bottom: 0.5rem
+
+    a
+      color: var.$light-green
+
+      &:hover
+        color: var.$dark-green
+  
+  .highlighted-category
+    color: var.$secondary-color
+    padding-bottom: 0.5rem
+
+  &__highlighted-metaContainer
+    display: flex
+    justify-content: space-between
+    align-items: center
+    gap: 20px
+    flex-wrap: wrap
+
+  .highlighted-meta
+    font-size: 1rem
+    margin-bottom: 0.5rem
+    color: var.$text-color
+
+  .highlighted-date
+    font-size: 0.875rem
+    color: gray
+    display: block
+    margin-bottom: 1rem
+
+  .highlighted__read-more-link
+    display: inline-flex
+    align-items: center
+    gap: 5px
+    white-space: nowrap
+    font-weight: bold
+    color: var.$dark-green
+    text-decoration: none
+    &:hover
+      color: var.$light-green
+
+    svg
+      transition: transform 0.2s ease
+
+    &:hover svg
+      transform: translateX(4px)
+      color: var.$light-green
+
+
+
 .blog__filters
   display: flex
   justify-content: space-between
@@ -17,9 +77,10 @@
   select
     padding: 8px
     font-size: 1rem
-    border: 2px solid var.$primary-color
+    border: 2px solid var.$dark-green
     border-radius: 5px
     color: var.$text-color
+    background: transparent
 
 .blog__articles
   display: block
@@ -27,45 +88,77 @@
   margin-bottom: 30px
 
 .blog__article
-  background-color: white
+  background-color: var.$dark-green
   padding: 20px
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1)
+  box-shadow: 0 4px 6px rgba(38, 40, 39, 0.1)
   border-radius: fct.rem(10)
   margin-bottom: 20px
+  border: 2px solid var.$dark-green
 
   .blog__article-header
     margin-bottom: 15px
 
     .title
       font-size: 1.6rem
-      color: var.$primary-color
+      color: var.$text-color
       text-decoration: none
 
     .category
       font-size: 1rem
       color: var.$secondary-color
 
-.blog__article-meta
+
+.blog__article-meta-container
+  display: flex
+  justify-content: space-between
+  align-items: center
+  gap: 20px
+  flex-wrap: wrap
+
+  .blog__article-meta
+    margin: 0  // enlève les marges par défaut
+    flex: 1 1 auto
     font-size: 1rem
-    color: var.$text-color
-    margin-bottom: 15px
+    color: var.$white
+    width: 80%
+
+  .read-more-link
+    display: inline-flex
+    align-items: center
+    gap: 5px
+    white-space: nowrap
+    font-weight: bold
+    color: var.$white
+    text-decoration: none
+    &:hover
+      color: var.$light-green
+
+    svg
+      transition: transform 0.2s ease
+
+    &:hover svg
+      transform: translateX(4px)
+      color: var.$light-green
 
 .blog__article-separator
     height: 1px
-    background-color: var.$light-grey
+    background-color: var.$white
     margin: 15px 0
 
 .blog__article-footer
     display: flex
     justify-content: space-between
     align-items: center
+    padding-top: 0.5rem
 
-    .date
+
+    .date, .tags
       font-size: 0.9rem
       color: #888
+      display: flex
+      align-items: center
 
     .tags
-      display: flex
       gap: 10px
 
       span
@@ -75,8 +168,10 @@
           border-radius: 20px
           font-size: 0.9rem
           cursor: pointer
-          &:hover
-              background-color: var.$primary-color
+          display: inline-flex
+          align-items: center
+          height: 100% // optionnel, à ajuster selon le rendu visuel
+
 
 
 // Tablet screens (768px and up)
@@ -88,8 +183,6 @@
     gap: fct.rem(30)
 
   .blog__articles
-    display: grid
-    grid-template-columns: repeat(2, 1fr)
     margin-top: fct.rem(30)
 
   .blog__article
@@ -102,7 +195,7 @@
 // Desktop screens (1024px and up)
 @media (min-width: 1024px)
   .blog
-    width: 80%
+    width: 70%
 
   .blog__article
     padding: 30px
