--- a/templates/admin_base.html.twig
+++ b/templates/admin_base.html.twig
@@ -62,7 +62,7 @@
                         <a class="{{ app.current_route == 'home' ? 'active' : ''}}" href="{{ path('home')}}">Mentions légales</a>
                     </li>
                     <li class="footer__list--item">
-                        <a class="{{ app.current_route == 'article.' ? 'active' : '' }}" href="{{ path('article.index')}}">Politique de confidentialité</a>
+                        <a class="{{ app.current_route == 'article.' ? 'active' : '' }}" href="{{ path('home')}}">Politique de confidentialité</a>
                     </li>
                 </ul>
             </div>
