--- a/templates/admin/article/new.html.twig
+++ b/templates/admin/article/new.html.twig
@@ -25,6 +25,11 @@
                {{ form_widget(form.category, {'attr': {'class': 'select'}}) }}
                {{ form_errors(form.category) }}
              </div>
+             <div>
+              {{ form_label(form.tags, null, {'label_attr': {'class': 'label'}}) }}
+              {{ form_widget(form.tags, {'attr': {'class': 'select', 'multiple': 'multiple'}}) }}
+              {{ form_errors(form.tags) }}
+            </div>
              <div class="tag-form__group">
                {{ form_label(form.metaDescription, null, {'label_attr': {'class': 'label'}}) }}
                {{ form_widget(form.metaDescription, {'attr': {'class': 'input'}}) }}
