--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,7 +61,7 @@
                         <a class="{{ app.current_route == 'home' ? 'active' : ''}}" href="{{ path('mentions_legales') }}">Mentions légales</a>
                     </li>
                     <li class="footer__list--item">
-                        <a class="{{ app.current_route == 'article.' ? 'active' : '' }}" href="{{ path('politique_confidentialite') }}">Politique de confidentialité</a>
+                        <a class="{{ app.current_route == 'home' ? 'active' : '' }}" href="{{ path('politique_confidentialite') }}">Politique de confidentialité</a>
                     </li>
                 </ul>
             </div>
