--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -609,7 +609,7 @@ a {
   padding: 0;
 }
 .nav__menu.show {
-  display: initial;
+  display: block;
 }
 .nav__menu--item {
   padding: 0.625rem 1.25rem;
