--- a/sass/main/_header.sass
+++ b/sass/main/_header.sass
@@ -29,7 +29,7 @@
         padding: 0
 
         &.show
-            display: initial
+            display: block
 
         &--item
             padding: fct.rem(10) fct.rem(20)
