--- a/templates/admin_base.html.twig
+++ b/templates/admin_base.html.twig
@@ -11,12 +11,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Alice&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{{ asset('css/main.css') }}">
         {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
             {% block importmap %}{{ importmap('app')}}{% endblock %}
         {% endblock %}
-
     </head>
     <body>
         <nav class="nav" id="main-navbar">
@@ -67,6 +68,5 @@
                 </ul>
             </div>
         </footer>
-        <script src="{{ asset('build/app.js') }}"></script>
     </body>
 </html>
