--- a/sass/components/_link.sass
+++ b/sass/components/_link.sass
@@ -3,6 +3,7 @@
 a
     text-decoration: none
     color: var.$light-green
+    font-weight: bold
     cursor: pointer
     &:hover
         font-weight: bold
