--- a/sass/main/_article.sass
+++ b/sass/main/_article.sass
@@ -29,7 +29,7 @@
 
             .article__category
                 font-size: var.$font-size-h3
-                color: var.$light-green
+                color: var.$pink
                 margin-bottom: 1rem
 
             .article__tags
