--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -461,7 +461,6 @@
   background: #2b4743;
   color: #efe4d5;
   padding: 1rem 2rem;
-  text-align: center;
 }
 .footer__container {
   display: flex;
@@ -469,6 +468,8 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  height: 100%;
+  width: 100%;
 }
 @media (min-width: 768px) {
   .footer__container {
@@ -487,6 +488,7 @@
   gap: 1rem;
   padding: 0;
   margin: 0;
+  align-items: center;
 }
 @media (min-width: 768px) {
   .footer .footer__list-links {
@@ -686,7 +688,7 @@
 }
 .article__page article .article__category-tags .article__category {
   font-size: 1.6rem;
-  color: #38d6c2;
+  color: #ea638c;
   margin-bottom: 1rem;
 }
 .article__page article .article__category-tags .article__tags {
