--- a/sass/main/_footer.sass
+++ b/sass/main/_footer.sass
@@ -5,7 +5,7 @@
   background: var.$dark-green
   color: var.$white
   padding: 1rem 2rem
-  text-align: center
+
 
   &__container
     display: flex
@@ -13,6 +13,8 @@
     align-items: center
     justify-content: center
     gap: 1rem
+    height: 100%
+    width: 100%
 
     @media (min-width: 768px)
         flex-direction: row
@@ -29,6 +31,7 @@
     gap: 1rem
     padding: 0
     margin: 0
+    align-items: center
 
     @media (min-width: 768px)
       flex-direction: row
